Fix HTML encoding and formatting issues

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     </style>
 </head>
 <body>
+    <!--HELLOOO BG !! BALAK TU VAS PASSER PAR LAA !! ALORS COUCOUUUU -->
 
 <script>
     // cœurs aléatoires
@@ -154,3 +155,4 @@
 
 </body>
 </html>
+
